--- a/obsidian/obsidian.html
+++ b/obsidian/obsidian.html
@@ -1,5 +1,5 @@
 <!-- Obsidian Cheat Sheet -->
-  <!-- Embed a video -->
-    <iframe width="640" height="320" src="https://www.youtube.com/embed/video_id" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <!-- Highlight text -->
     <span style="color:#7f6df2">Text</span>
+  <!-- Embed a video from Imgur -->
+    <video width="640" height="320" controls><source src="video_link" type="video/mp4"></video>
